log

sá., 12 de mar. de 2022 11:29:47: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:19:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
13d5926
sá., 12 de mar. de 2022 11:32:39: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:19:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
49cc234
sá., 12 de mar. de 2022 11:33:10: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:19:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7521b60
sá., 12 de mar. de 2022 11:33:32: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:19:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
244da58
sá., 12 de mar. de 2022 11:33:39: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:19:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
db9c5e7
sá., 12 de mar. de 2022 11:38:31: 
 tests:  1|6
total_score: 10/70
1ad093c
sá., 12 de mar. de 2022 13:36:06: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
017d791
sá., 12 de mar. de 2022 14:32:05: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:64:12: error: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Werror=format=]
    scanf("%d",p->edad);
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
3713f1f
sá., 12 de mar. de 2022 14:33:10: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:64:12: error: format '%i' expects argument of type 'int *', but argument 2 has type 'int' [-Werror=format=]
    scanf("%i",p->edad);
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
3f895a8
sá., 12 de mar. de 2022 14:36:10: 
 exercises.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:62:18: error: format '%i' expects argument of type 'int *', but argument 4 has type 'int' [-Werror=format=]
    scanf("%s %s %i",p->nombre,p->rut,p->edad);
                  ^
cc1.exe: all warnings being treated as errors
Compilation failed
95683d0
sá., 12 de mar. de 2022 14:37:41: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
3a41134
sá., 12 de mar. de 2022 14:41:04: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:62:4: error: implicit declaration of function 'strcopy' [-Werror=implicit-function-declaration]
    strcopy(p->nombre, nombre);
    ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
03b3685
sá., 12 de mar. de 2022 14:42:40: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
20661cb
sá., 12 de mar. de 2022 17:32:45: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
75731fd
sá., 12 de mar. de 2022 17:34:42: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:85:8: error: unused variable 'i' [-Werror=unused-variable]
    int i;
        ^
cc1.exe: all warnings being treated as errors
Compilation failed
4476694
sá., 12 de mar. de 2022 17:34:58: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
94a10c1
sá., 12 de mar. de 2022 17:35:29: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ac03f77
sá., 12 de mar. de 2022 17:37:20: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
84b23a3
sá., 12 de mar. de 2022 17:40:32: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:89:11: error: function returns address of local variable [-Werror=return-local-addr]
    return p;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
784c2ac
sá., 12 de mar. de 2022 17:42:02: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
2805913
sá., 12 de mar. de 2022 17:55:01: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7f4a28d
sá., 12 de mar. de 2022 17:56:39: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
45084bd
sá., 12 de mar. de 2022 17:59:39: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
aab9970
sá., 12 de mar. de 2022 18:00:36: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0d84e33
sá., 12 de mar. de 2022 18:54:12: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
34b24a8
sá., 12 de mar. de 2022 18:59:48: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearVector':
exercises.c:84:12: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    p->datos=(Vector*)calloc(n,sizeof(Vector));
            ^
exercises.c:84:12: error: 'p' is used uninitialized in this function [-Werror=uninitialized]
    p->datos=(Vector*)calloc(n,sizeof(Vector));
    ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
480f436
sá., 12 de mar. de 2022 19:00:45: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
07f9c85
